Test script and dev dependencies added.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express bootstrap template.",
   "main": "expr/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
   "dependencies": {
     "express": "~3.3.3",
     "winston": "~0.7.2"
+  },
+  "devDependencies": {
+    "chai": "~1.7.2",
+    "mocha": "~1.12.0"
   }
 }
