--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "express": "~3.3.3",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "chai": "~1.7.2",
