--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "express": "~3.3.3",
     "winston": "~0.7.2",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "redis": "~0.8.4",
+    "hiredis": "~0.1.15"
   },
   "devDependencies": {
     "chai": "~1.7.2",
