--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "winston": "~0.7.2",
     "socket.io": "~0.9.16",
     "redis": "~0.8.4",
-    "hiredis": "~0.1.15"
+    "hiredis": "~0.1.15",
+    "express-resource": "~1.0.0"
   },
   "devDependencies": {
     "chai": "~1.7.2",
